# bookXchange

./: README.md  data.py  main.py  pyproject.toml  requirements.txt
static/assets/css/: style.css
templates/: find.html  index.html  login.html  register.html  request.html  supply.html
